update template - POC screensave

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -70,7 +70,7 @@
 					<div class="row">
 						<div class="col-xs-12 display_table">
 							<div class="header_left_logo display_table_cell"> <a href="./" class="logo">
-                        <img src="images/logo.png" alt="">
+                        <img src="img/sv.png" alt="">
                     </a> </div>
 							<div class="header_mainmenu display_table_cell text-center">
 								<!-- main nav start -->
