--- a/HTML/shop-product.html
+++ b/HTML/shop-product.html
@@ -59,7 +59,7 @@
 							<div class="inline-content big-spacing grey"> <span class="teaser darklinks">
 						<span class="teaser_icon small main_bg_color round">
 							<i class="fa fa-phone" aria-hidden="true"></i>
-						</span> <strong>1-800</strong>-123-4567 </span> <span class="teaser darklinks color2">
+						</span> 1-800-123-4567 </span> <span class="teaser darklinks color2">
 						<span class="teaser_icon small main_bg_color2 round">
 							<i class="fa fa-envelope" aria-hidden="true"></i>
 						</span> <a href="mailto:example@example.com">sales@strainvault.com</a> </span> 
@@ -73,7 +73,7 @@
 					<div class="row">
 						<div class="col-xs-12 display_table">
 							<div class="header_left_logo display_table_cell"> <a href="./" class="logo">
-                        <img src="images/logo.png" alt="">
+                        <img src="img/sv.png" alt="">
                     </a> </div>
 							<div class="header_mainmenu display_table_cell text-center">
 								<!-- main nav start -->
@@ -101,8 +101,6 @@
 								<!-- eof main nav -->
 								<!-- header toggler --><span class="toggle_menu"><span></span></span>
 							</div>
-							<div class="header_right_buttons display_table_cell text-right hidden-xs"> <a href="contact.html" class="theme_button gradient2 min_width_button"><span class="additional">Request</span> call back</a> </div>
-						</div>
 					</div>
 				</div>
 			</header>
@@ -146,8 +144,8 @@
 									<!-- eof .images -->
 								</div>
 								<div class="summary entry-summary col-sm-6">
-									<h1 itemprop="name" class="product_title">Chemdawg</h1> <span class="price">
-							<span class="amount">$15.00 - $400.00</span> </span>
+									<h1 itemprop="name" class="product_title">OG Kush Wax</h1> <span class="price">
+							<span class="amount">$20.00 - $420.00</span> </span>
 									<form class="cart" method="post" enctype="multipart/form-data">
 										<table class="variations" cellspacing="0">
 											<tbody>
@@ -174,7 +172,7 @@
 									Add to cart
 								</a> </div>
 									</form>
-									<div class="product_meta highlight4links grey"> <span class="sku_wrapper">SKU: <span class="sku highlight4">N/A</span></span> <span class="posted_in">Category: <a href="shop.html" rel="tag">Hamburger</a>, <a href="shop.html" rel="tag">Landjaeger</a></span> </div>
+									<div class="product_meta highlight4links grey">  <span class="posted_in">Category: <a href="shop.html" rel="tag">Dab</a>, <a href="shop.html" rel="tag">Landjaeger</a></span> </div>
 								</div>
 								<!-- .summary.col- -->
 							</div>
@@ -335,19 +333,15 @@
 							<div class="widget widget_categories">
 								<h3 class="widget-title">Categories</h3>
 								<ul class="darklinks">
-									<li> <a href="shop.html">Picanha turducken</a> <span>/ 34</span>
+									<li> <a href="shop.html">Terpenes</a> <span>/ 42</span>
 										<ul>
-											<li> <a href="shop.html">Tail Meatball</a> <span>/ 15</span> </li>
-											<li> <a href="shop.html">Sausage Beef</a> <span>/ 19</span> </li>
+											<li> <a href="shop.html">OG Kush</a> <span>/ 40</span> </li>
+											<li> <a href="shop.html">Sour D</a> <span>/ 20</span> </li>
 										</ul>
 									</li>
-									<li> <a href="shop.html">Jowl Corned</a> <span>/ 27</span>
-										<ul>
-											<li> <a href="shop.html">Pork Chop</a> <span>/ 15</span> </li>
-											<li> <a href="shop.html">Beef Pork Loin</a> <span>/ 12</span> </li>
-										</ul>
+									<li> <a href="shop.html">Vaporizers</a> <span>/ 24</span>
 									</li>
-									<li> <a href="#0">Ground Round</a> <span>/ 38</span> </li>
+									<li> <a href="#0">Bud</a> <span>/ 420</span> </li>
 								</ul>
 							</div>
 							<div class="widget widget_shopping_cart">
@@ -359,8 +353,8 @@
 								<img src="images/shop/01.jpg" class="muted_background" alt="">
 							</a> </div>
 											<div class="media-body media-middle"> <a href="#" class="remove" title="Remove this item"></a>
-												<p class="darklinks"> <a href="shop-product.html">Chemdawg</a> </p> <span class="product-quantity">
-								<span>2 x</span> <span class="price">$25.00</span> </span>
+												<p class="darklinks"> <a href="shop-product.html">OG Kush Terpenes</a> </p> <span class="product-quantity">
+								<span>2 x</span> <span class="price">$42.00</span> </span>
 											</div>
 										</li>
 										<li class="media">
@@ -373,7 +367,7 @@
 											</div>
 										</li>
 									</ul>
-									<p class="total grey"> <span>Subtotal:</span> <span class="price">$69.94</span> </p>
+									<p class="total grey"> <span>Subtotal:</span> <span class="price">$439.99</span> </p>
 									<p> <a href="shop-cart.html" class="theme_button gradient1 min_width_button">View cart</a> <a href="shop-cart.html" class="theme_button gradient2 min_width_button">Checkout</a> </p>
 								</div>
 							</div>
