--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 				<div class="container-fluid">
 					<div class="row">
 						<div class="col-12 display_table">
-							<div class="header_left_logo display_table_cell"> <a href="./" class="logo">
-                        <img src="img/sv.png" alt="">
+							<div class="header_left_logo display_table_cell"> <a href="#" class="logo">
+                        <img src="images/sv-header.png" alt="">
                     </a> </div>
 							<div class="header_mainmenu display_table_cell text-center">
 								<!-- main nav start -->
