--- a/pages/comingsoon1.html
+++ b/pages/comingsoon1.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+=<!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
@@ -15,12 +15,12 @@
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/animations.css">
-	<link rel="stylesheet" href="css/fonts.css">
-	<link rel="stylesheet" href="css/main.css" class="color-switcher-link">
-	<link rel="stylesheet" href="css/shop.css" class="color-switcher-link">
-	<script src="js/vendor/modernizr-2.6.2.min.js"></script>
+	<link rel="stylesheet" href="../css/bootstrap.min.css">
+	<link rel="stylesheet" href="../css/animations.css">
+	<link rel="stylesheet" href="../css/fonts.css">
+	<link rel="stylesheet" href="../css/main.css" class="color-switcher-link">
+	<link rel="stylesheet" href="../css/shop.css" class="color-switcher-link">
+	<script src="../js/vendor/modernizr-2.6.2.min.js"></script>
 	<!--[if lt IE 9]>
 		<script src="js/vendor/html5shiv.min.js"></script>
 		<script src="js/vendor/respond.min.js"></script>
@@ -429,9 +429,9 @@
 		<!-- eof #box_wrapper -->
 	</div>
 	<!-- eof #canvas -->
-	<script src="js/compressed.js"></script>
-	<script src="js/selectize.min.js"></script>
-	<script src="js/main.js"></script>
+	<script src="../js/compressed.js"></script>
+	<script src="../js/selectize.min.js"></script>
+	<script src="../js/main.js"></script>
 	<!--  -->
 </body>
 
