--- a/index.html
+++ b/index.html
@@ -202,9 +202,9 @@
 						<div class="col-sm-12 text-center">
 							<ul class="topmargin_40 inline-content small-text darklinks">
 								<li> <a href="https://www.facebook.com/strainvaultja876/" class="socicon-facebook text-icon">Facebook</a> </li>
-								<li> <a href="" class="socicon-instagram text-icon">Instagram</a> </li>
+								<li> <a href="https://www.instagram.com/strainvault" class="socicon-instagram text-icon">Instagram</a> </li>
 							</ul><hr>
-							<p class="small-text">&copy; strainvaultja.com 2018 All Rights Reserved</p>
+							<p class="small-text">&copy; 2018 strainvaultja.com</p>
 						
 						</div>
 					</div>
